# toonstoredb

./: .dockerignore  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CONNECTION_GUIDE.md  Cargo.toml  DOCKER_DEPLOYMENT.md  DOCKER_SETUP_GUIDE.md  Dockerfile  FFI_ROADMAP.md  LICENSE  PROGRESS.md  README.md  WEEKS_1_2_SUMMARY.md  benchmark_resp.py  build-docker.ps1  build-docker.sh  cargo.md  docker-compose.yml
.github/: DOCKER_CI_SETUP.md
.github/workflows/: ci.yml  docker.yml
crates/tooncache/: Cargo.toml
crates/tooncache/benches/: cache.rs
crates/tooncache/src/: cache.rs  lib.rs  lru.rs  stats.rs
crates/toonstoredb/: Cargo.toml
crates/toonstoredb/benches/: storage.rs
crates/toonstoredb/src/: error.rs  lib.rs  parser.rs  storage.rs
crates/tstd/: Cargo.toml
crates/tstd/src/: auth.rs  backup.rs  handler.rs  main.rs  resp.rs  tls.rs  users.rs
data/: keymap.txt
test-data/: keymap.txt
