[package]
name = "tstd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ToonStore Daemon - Redis-compatible RESP server"

[[bin]]
name = "tstd"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2.0"
tooncache = { path = "../tooncache" }
toonstoredb = { path = "../toonstoredb" }
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde_json = "1.0"
bcrypt = "0.15"
chrono = "0.4"
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
redis = "0.24"
tempfile = "3.8"
